devtools/laymos/test/fixtures/story-ejection/invalid/escaped-binding.ts
import { flow } from 'laymos/story';

export const escaped = flow;
